# tis-tidb-solr-plugin

./: CMakeLists.txt  collection_meta.c  curl.md  errors.c  java_bin_tuple_stream_parser.c  main.c  remote_get.c  tag_type.c  thread_test.c  threadqueue.c  threadqueue.h  tis_type.c  utils.c
